# UniversalCan

./: .clang-tidy  .gitignore  .gitmodules  ElmBT.cpp  ElmBT.h  ElmWindows.cpp  IAdapter.h  ISerialPort.h  README.md  SerialPortOSX.cpp  SerialPortOSX.h  SerialPortWindows.cpp  SerialPortWindows.h  main.cpp  readme.md  xmlReader.h
Canscan/Canscan/: Canscan.cpp  Canscan.vcxproj  Canscan.vcxproj.filters
Canscan/Canscan/Debug/: Canscan.pch  vc141.idb
Canscan/Canscan/Debug/Canscan.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Canscan/Canscan/x64/Debug/: Canscan.pch  vc141.idb
Canscan/Canscan/x64/Debug/Canscan.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Canscan.lastbuildstate
Canscan/Debug/: Canscan.ilk
Code/: .clang-format  .clang-tidy  CMakeLists.txt
Code/include/: CMakeLists.txt  CanMessage.h  CanMessageTemplate.h  CanValue.h  CanValueTemplate.h  ModifierFunction.h  ProtocolDefinitionParser.h
Code/include/Transcievers/: ELM327.h  ISerial.h  ITransciever.h  SerialMacOS.h  SerialUnix.h  SerialWindows.h
Code/src/: CMakeLists.txt  CanMessage.cpp  CanMessageTemplate.cpp  CanValue.cpp  CanValueTemplate.cpp  ModifierFunction.cpp  ProtocolDefinitionParser.cpp  ProtocolMapper.cpp  UniversalCanLib.cpp
Code/src/Transcievers/: ELM327.cpp  SerialMacOS.cpp  SerialUnix.cpp  SerialWindows.cpp
Code/tests/: AllTests.cpp  CMakeLists.txt  CanMessageTests.cpp  ELM327Tests.cpp  ModifierFunctionTests.cpp  ProtocolDefinitionParserTests.cpp  TestCanMessageTemplate.cpp
Code/tests/include/: TestConstants.h
Databases/: BMW_GS.csv  BMW_GS.xlsx  BMW_GS.xml
ProtocolDefinitions/: J1979.xml  bmw_motorrad.json  bmw_motorrad.xml
Requirements/: Requirements.md
Source/: CanMessage.h  CanScanner.cpp  ElmWindows.h  ProtocolMapper.cpp  main.cpp
Source/Transcievers/: ELM327.cpp  ELM327.h  ISerial.h  ITransciever.h  SerialMacOS.cpp  SerialMacOS.h  SerialWindows.cpp  SerialWindows.h
source/MacOs/: main.cpp
source/Windows/Canscan/: Canscan.sln
source/Windows/Canscan/Canscan/: Canscan.cpp  Canscan.vcxproj.filters
source/Windows/Canscan/Canscan/Debug/: Canscan.pch  vc141.idb
source/Windows/Canscan/Canscan/Debug/Canscan.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Canscan.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
source/Windows/Canscan/Debug/: Canscan.ilk
source/android/app/: build.gradle
source/android/app/src/androidTest/java/com/erik/canscan/: ExampleInstrumentedTest.java
source/android/app/src/main/: AndroidManifest.xml
source/android/app/src/main/cpp/: CMakeLists.txt  SerialPortAndroid.cpp  SerialPortAndroid.h  native-lib.cpp
source/android/app/src/main/java/com/erik/canscan/: BluetoothHandler.java  MainActivity.java
source/android/app/src/main/res/layout/: activity_main.xml
source/android/app/src/main/res/values/: strings.xml
source/android/app/src/test/java/com/erik/canscan/: ExampleUnitTest.java
source/android/gradle/wrapper/: gradle-wrapper.properties
source/generic/: CanMessage.h  ElmBT.cpp  ElmBT.h  IAdapter.h  xmlReader.h
